--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <!-- MAIN -->
   <main class="main">
     <h1>All Possible Rotations</h1>
-    <p class="subtitle">1–6 week periods · Validation Included</p>
+    <p class="subtitle">1–6 week periods · Monday/Wed validation</p>
 
     <div id="results" class="results-grid"></div>
   </main>
